Images added in the component. Though they are not working as online URLs are obsolete and added property binding in image tag properties via angular.

--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -34,7 +34,10 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="#movie of movies">
-                        <td></td>
+                        <td>
+                            <img [src]="movie.imageUrl" alt="" [title]="movie.movieName"
+                                 [style.width.px]="imageWidth" [style.margin.px]="imageMargin" />
+                        </td>
                         <td>{{movie.movieName}}</td>
                         <td>{{movie.movieStar}}</td>
                         <td>{{movie.releaseDate}}</td>
