--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -21,8 +21,8 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary">
-                                Show Poster
+                            <button class="btn btn-primary" (click)="toggleImage()">
+                                {{ seePoster ? 'Hide' : 'View' }} Poster
                             </button>
                         </th>
                         <th>Movie</th>
@@ -33,9 +33,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="#movie of movies">
+                    <tr *ngFor="let movie of movies">
                         <td>
-                            <img [src]="movie.imageUrl" alt="" [title]="movie.movieName"
+                            <img *ngIf='seePoster'
+                                 [src]="movie.imageUrl" alt="URL unavailable"
+                                 [title]="movie.movieName"
                                  [style.width.px]="imageWidth" [style.margin.px]="imageMargin" />
                         </td>
                         <td>{{movie.movieName}}</td>
