--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -8,12 +8,12 @@
         <div class="row">
             <div class="col-md-2">Search:</div>
             <div class="col-md-4">
-                <input type="text" value="" />
+                <input type="text" [(ngModel)]="listFilter" />
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <h3>Searching:</h3>
+            <div class="col-md-6" *ngIf="listFilter">
+                <h3>Searching: {{ listFilter }}</h3>
             </div>
         </div>
         <div class="table-responsive">
