--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -33,7 +33,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="#movie of movies">
+                    <tr *ngFor="let movie of movies">
                         <td>
                             <img *ngIf='seePoster'
                                  [src]="movie.imageUrl" alt="URL unavailable"
