Implemented rating component and click event to show a message on page. Unfortunately not working in chrome due to cache!

--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -44,7 +44,10 @@
                         <td>{{movie.movieStar | uppercase}}</td>
                         <td>{{movie.releaseDate}}</td>
                         <td>{{movie.price | currency:'USD':true:'1.2-2' }}</td>
-                        <td>{{movie.starRating}}</td>
+                        <td>
+                            <md-review [rating]="movie.starRating"
+                                       (ratingClicked)="onRatingClicked($event)"></md-review>
+                        </td>
                     </tr>
                 </tbody>
             </table>
