Implemented observables in the service and got all the movies list in the component via service call using scubscribe method.

--- a/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
+++ b/MvcWithAngularJS2/AngularJS2Setup/app/movies/movie-list.component.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="table-responsive">
-            <table class="table" *ngIf="movies.length">
+            <table class="table" *ngIf="movies && movies.length">
                 <thead>
                     <tr>
                         <th>
